--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,11 @@
     "@mantine/carousel": "^7.11.2",
     "@mantine/charts": "^7.11.2",
     "@mantine/code-highlight": "^7.11.2",
-    "@mantine/core": "^7.11.2",
+    "@mantine/core": "^7.13.2",
     "@mantine/dates": "^7.11.2",
     "@mantine/dropzone": "^7.11.2",
     "@mantine/form": "^7.11.2",
-    "@mantine/hooks": "^7.11.2",
+    "@mantine/hooks": "^7.13.2",
     "@mantine/modals": "^7.11.2",
     "@mantine/notifications": "^7.11.2",
     "@mantine/nprogress": "^7.11.2",
@@ -36,7 +36,8 @@
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "sass": "^1.79.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
@@ -48,7 +49,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "postcss-preset-mantine": "^1.16.0",
     "postcss-simple-vars": "^7.0.1",
