--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@tiptap/pm": "^2.8.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^7.1.0",
     "lint": "^0.8.19",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sass": "^1.79.4",
     "typescript": "^5.6.2"
