--- a/.github/workflows/main_backend-invingem-impreuna.yml
+++ b/.github/workflows/main_backend-invingem-impreuna.yml
@@ -31,7 +31,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: backend
+          path: backend/
+          if-no-files-found: error
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,6 +46,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: .
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
@@ -53,4 +55,4 @@ jobs:
           app-name: 'backend-invingem-impreuna'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_15930357D4164135A912AE45D4732AF1 }}
-          package: node-app
+          package: .
