--- a/.github/workflows/main_backend-invingem-impreuna.yml
+++ b/.github/workflows/main_backend-invingem-impreuna.yml
@@ -27,6 +27,9 @@ jobs:
           npm install
           npm run build --if-present
 
+      - name: List backend files
+        run: ls -lah backend
+  
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -46,7 +49,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: .
+          path: backend
+
+      - name: List downloaded files
+        run: ls -lah backend
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
@@ -55,4 +61,4 @@ jobs:
           app-name: 'backend-invingem-impreuna'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_15930357D4164135A912AE45D4732AF1 }}
-          package: .
+          package: backend
