--- a/.github/workflows/main_backend-invingem-impreuna.yml
+++ b/.github/workflows/main_backend-invingem-impreuna.yml
@@ -28,6 +28,7 @@ jobs:
           npm run build --if-present
 
       - name: List backend files
+        shell: bash
         run: ls -lah backend
   
       - name: Upload artifact for deployment job
