--- a/.github/workflows/main_backend-invingem-impreuna.yml
+++ b/.github/workflows/main_backend-invingem-impreuna.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - backend-invingem-impreuna
 
 on:
@@ -35,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: backend/
+          path: ./backend  # Asigură-te că calea este corectă și include toate fișierele backend
           if-no-files-found: error
 
   deploy:
@@ -50,10 +47,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: backend
+          path: ./backend  
 
       - name: List downloaded files
-        run: ls -lah backend
+        run: ls -lah ./backend  
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
@@ -62,4 +59,4 @@ jobs:
           app-name: 'backend-invingem-impreuna'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_15930357D4164135A912AE45D4732AF1 }}
-          package: backend
+          package: ./backend  
