--- a/.github/workflows/main_backend-invingem-impreuna.yml
+++ b/.github/workflows/main_backend-invingem-impreuna.yml
@@ -18,15 +18,14 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install and build
+      - name: npm install
         run: |
           cd backend
           npm install
-          npm run build --if-present
 
       - name: Verify backend files before upload
-        run: Get-ChildItem -Path ./backend -Recurse
-  
+        run: ls -lah ./backend
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -61,4 +60,4 @@ jobs:
           app-name: 'backend-invingem-impreuna'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_15930357D4164135A912AE45D4732AF1 }}
-          package: ./backend   
+          package: ./backend
