--- a/.github/workflows/main_backend-invingem-impreuna.yml
+++ b/.github/workflows/main_backend-invingem-impreuna.yml
@@ -24,7 +24,10 @@ jobs:
           npm install
 
       - name: Verify backend files before upload
-        run: ls -lah ./backend
+        run: |
+          Get-ChildItem -Path backend -Recurse
+
+
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -48,7 +51,8 @@ jobs:
           path: ./backend  
 
       - name: List downloaded files from artifact
-        run: ls -lah ./backend  
+        run: |
+          Get-ChildItem -Path backend -Recurse
 
       - name: Clean old files from backend
         run: rm -rf ./backend/*  
