--- a/.github/workflows/main_backend-invingem-impreuna.yml
+++ b/.github/workflows/main_backend-invingem-impreuna.yml
@@ -18,22 +18,20 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install
+      - name: Install dependencies
         run: |
           cd backend
           npm install
 
       - name: Verify backend files before upload
-        run: |
-          Get-ChildItem -Path backend -Recurse
-
-
+        shell: bash
+        run: ls -la backend
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./backend
+          path: backend/**  
           if-no-files-found: error
 
   deploy:
@@ -48,20 +46,19 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: ./backend  
+          path: .
 
       - name: List downloaded files from artifact
-        run: |
-          Get-ChildItem -Path backend -Recurse
+        run: ls -la
 
       - name: Clean old files from backend
-        run: rm -rf ./backend/*  
+        run: rm -rf ./* 
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'backend-invingem-impreuna'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_15930357D4164135A912AE45D4732AF1 }}
-          package: ./backend
+          package: .  
