--- a/.github/workflows/main_backend-invingem.yml
+++ b/.github/workflows/main_backend-invingem.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read 
 
     steps:
       - uses: actions/checkout@v4
@@ -22,15 +22,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+          cache: 'npm'
 
-      - name: npm install, build, and test
+      - name: Install dependencies, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+        working-directory: backend 
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: cd backend && zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -70,5 +72,4 @@ jobs:
         with:
           app-name: 'backend-invingem'
           slot-name: 'Production'
-          package: .
-          
+          package: release.zip  
