--- a/.github/workflows/main_backend-invingem.yml
+++ b/.github/workflows/main_backend-invingem.yml
@@ -24,11 +24,10 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
 
-      - name: Install dependencies, build, and test
+      - name: Install dependencies and build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
         working-directory: backend 
 
       - name: Zip artifact for deployment
