--- a/.github/workflows/main_backend-invingem.yml
+++ b/.github/workflows/main_backend-invingem.yml
@@ -31,8 +31,10 @@ jobs:
         working-directory: backend 
 
       - name: Zip artifact for deployment
-        run: cd backend && zip -r ../release.zip .
-
+        run: |
+          cd backend
+          zip -r ../release.zip * .[^.]*
+  
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
