Update GitHub actions - ensure correct backend deployment

--- a/.github/workflows/main_backend-invingem.yml
+++ b/.github/workflows/main_backend-invingem.yml
@@ -1,6 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
+# GitHub Actions Workflow pentru deploy pe Azure
 name: Build and deploy Node.js app to Azure Web App - backend-invingem
 
 on:
@@ -34,7 +32,7 @@ jobs:
         run: |
           cd backend
           zip -r ../release.zip * .[^.]*
-  
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -48,8 +46,8 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read 
 
     steps:
       - name: Download artifact from build job
@@ -59,7 +57,12 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+        working-directory: backend  # ADĂUGAT
+
+      - name: Install dependencies on Azure server
+        run: npm install
+        working-directory: backend  # ADĂUGAT
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -73,4 +76,4 @@ jobs:
         with:
           app-name: 'backend-invingem'
           slot-name: 'Production'
-          package: release.zip  
+          package: backend  # ADĂUGAT
