--- a/.github/workflows/main_backend-invingem.yml
+++ b/.github/workflows/main_backend-invingem.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-          npm install
+          npm ci
           npm run build --if-present
         working-directory: ./backend
 
